<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background_color"
    tools:context=".views.MainActivity">

    <Button
        android:id="@+id/btn_1"
        style="@style/Theme.APIQueryApplication.BtnMain"
        android:layout_marginTop="92dp"
        android:text="@string/posts"
        app:backgroundTint="@color/black"
        app:strokeColor="@color/blue_500"
        app:strokeWidth="2dp" />

    <Button
        android:id="@+id/btn_2"
        style="@style/Theme.APIQueryApplication.BtnMain"
        android:text="@string/comments"
        app:backgroundTint="@color/black"
        app:strokeColor="@color/orange_500"
        app:strokeWidth="2dp" />

    <Button
        android:id="@+id/btn_3"
        style="@style/Theme.APIQueryApplication.BtnMain"
        android:text="@string/user"
        app:backgroundTint="@color/black"
        app:strokeColor="@color/red_500"
        app:strokeWidth="2dp" />

    <Button
        android:id="@+id/btn_4"
        style="@style/Theme.APIQueryApplication.BtnMain"
        android:text="@string/todos"
        app:backgroundTint="@color/black"
        app:strokeColor="@color/green_500"
        app:strokeWidth="2dp" />

    <Button
        android:id="@+id/btn_5"
        style="@style/Theme.APIQueryApplication.BtnMain"
        android:text="@string/photos"
        app:backgroundTint="@color/black"
        app:strokeColor="@color/pink_500"
        app:strokeWidth="2dp" />

    <Button
        android:id="@+id/btn_6"
        style="@style/Theme.APIQueryApplication.BtnMain"
        android:text="@string/albums"
        app:backgroundTint="@color/black"
        app:strokeColor="@color/yellow_500"
        app:strokeWidth="2dp" />

</LinearLayout>